Cleaned up. Implemented Repositories. Student page fetching info from file and saving correctly (needs testing with printer). Configure app.config for error tracing

--- a/App.config
+++ b/App.config
@@ -21,4 +21,13 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="errorTraces" type="System.Diagnostics.XmlWriterTraceListener" initializeData="eoc_trace-error.xml">
+          <filter type="System.Diagnostics.EventTypeFilter" initializeData="Warning"/>
+        </add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
